erDiagram
    categories {
        INTEGER id PK
        TEXT name
        TEXT description
        INTEGER active
        TIMESTAMP deleted_at
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    customers {
        INTEGER id PK
        TEXT name
        TEXT document
        TEXT document_type
        TEXT phone
        TEXT mobile
        TEXT email
        TEXT address
        TEXT neighborhood
        TEXT city
        TEXT state
        TEXT zip_code
        TEXT notes
        INTEGER active
        TIMESTAMP deleted_at
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    products {
        INTEGER id PK
        TEXT name
        TEXT barcode
        TEXT reference
        TEXT description
        INTEGER cost_price
        INTEGER sale_price
        INTEGER wholesale_price
        INTEGER current_stock
        INTEGER minimum_stock
        INTEGER category_id FK
        TEXT supplier
        INTEGER active
        TIMESTAMP deleted_at
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    sales {
        INTEGER id PK
        TEXT sale_number
        INTEGER customer_id FK
        INTEGER subtotal
        INTEGER discount
        INTEGER total
        TEXT payment_method
        INTEGER installments
        TEXT status
        TIMESTAMP sale_date
        TEXT notes
        TIMESTAMP deleted_at
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    sale_items {
        INTEGER id PK
        INTEGER sale_id FK
        INTEGER product_id FK
        INTEGER quantity
        INTEGER unit_price
        INTEGER item_discount
        INTEGER subtotal
        TIMESTAMP created_at
    }

    installments {
        INTEGER id PK
        INTEGER sale_id FK
        INTEGER number
        INTEGER installment_amount
        DATE due_date
        DATE payment_date
        INTEGER paid_amount
        TEXT status
        TEXT notes
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    stock_movements {
        INTEGER id PK
        INTEGER sale_id FK
        INTEGER product_id FK
        TEXT type
        INTEGER quantity
        INTEGER unit_value
        INTEGER total_value
        TEXT notes
        TIMESTAMP deleted_at
        TIMESTAMP created_at
    }

    %% Relationships
    categories ||--o{ products : "has many"
    customers ||--o{ sales : "has many"
    products ||--o{ sale_items : "has many"
    products ||--o{ stock_movements : "has many"
    sales ||--o{ sale_items : "has many"
    sales ||--o{ installments : "has many"
    sales ||--o{ stock_movements : "has many"
